# streamlit_expenses

./: app.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app.py--backup  test.py
.streamlit/: config.toml
sidebar/: show_exp copy.py  show_exp.py  todo.py
utils/: __init__.py  tools.py
