[project]
name = "streamlit-expenses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "streamlit>=1.50.0",
    "streamlit-authenticator>=0.4.2",
    "streamlit-extras>=0.7.8",
]
